学习了tfidf的用法

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -9,7 +9,13 @@ activate
 deactivate 
 ```
 
+#### tf-idf含义
 
+```python
+# tf: term frequency:词的频率
+# idf: inverse document frequency:逆文档频率 == log(总文档数量/该词出现的文档数量)
+# tf*idf:重要性程度
+```
 
 
 
