--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -19,6 +19,50 @@ deactivate
 
 
 
+### 类别性数据的处理方式（one-hot编码）
+
+```
+from sklearn.feature_extraction import DictVectorizer
+from sklearn.feature_extraction.text import CountVectorizer
+from sklearn.feature_extraction.text import TfidfVectorizer
+```
+
+
+
+### 数值型数据的处理方式（归一化，标准化）
+
+#### 归一化（一般不使用）
+
+缺点：鲁棒性（稳定性）较差，受异常点的影响
+
+只适合传统精确小数点场景
+
+#### 标准化（常使用）
+
+优点：不容易受异常点的影响，利用方差来求标准差，方差考量数据的稳定性
+
+适合现代嘈杂大数据场景
+
+```python
+from sklearn.preprocessing import MinMaxScaler  # 归一化
+mms = MinMaxScaler(feature_range=(2, 3))  # 缩放特征值到给定范围
+data = mms.fit_transform([[12, 23, 13, 33], [92, 63, 73, 33], [15, 93, 33, 35]])
+print(data)
+# 1.目的：使得某一个特征不会对最终结果造成更大的影响
+# 公式： (x-min)/(max-min)
+
+from sklearn.preprocessing import StandardScaler  # 标准化
+st = StandardScaler()
+data = st.fit_transform([[12, 23, 13, 33], [92, 63, 73, 33], [15, 93, 33, 35]])
+print(data)
+```
+
+
+
+
+
+
+
 
 
 
