学习了SimpleImputer插补的用法

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -55,9 +55,34 @@ from sklearn.preprocessing import StandardScaler  # 标准化
 st = StandardScaler()
 data = st.fit_transform([[12, 23, 13, 33], [92, 63, 73, 33], [15, 93, 33, 35]])
 print(data)
+
+# scale效果同StandardScaler
+from sklearn.preprocessing import scale
+import numpy as np
+def t_scale():
+	"""标准化缩放"""
+	x_train = np.array([[12, 23, 13, 33], [92, 63, 73, 33], [15, 93, 33, 35]])
+	print(x_train)
+	data = scale(x_train)
+	# data = scale([[12, 23, 13, 33], [92, 63, 73, 33], [15, 93, 33, 35]])
+	print(data)
 ```
 
 
+
+### SimpleImputer语法
+
+完成缺失值插补，**一般按列进行插补**
+
+```python
+from sklearn.impute import SimpleImputer
+import numpy as np
+# strategy填补的策略，mean是平均值填补
+# verbose填补按行还是列，0按列平均值填补，1按行平均值填补
+it = SimpleImputer(missing_values=np.nan, strategy='mean', verbose=0)
+data = it.fit_transform([[12, 23, 13, 33], [92, np.nan, 73, 33], [15, 93, 33, 35]])
+print(data)
+```
 
 
 
