学习了特征选择降维和PCA主成分分析降维

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -17,6 +17,8 @@ deactivate
 # tf*idf:重要性程度
 ```
 
+- 数据预处理使用的模块 **sklearn.preprocessing**
+
 
 
 ### 类别性数据的处理方式（one-hot编码）
@@ -49,7 +51,9 @@ mms = MinMaxScaler(feature_range=(2, 3))  # 缩放特征值到给定范围
 data = mms.fit_transform([[12, 23, 13, 33], [92, 63, 73, 33], [15, 93, 33, 35]])
 print(data)
 # 1.目的：使得某一个特征不会对最终结果造成更大的影响
-# 公式： (x-min)/(max-min)
+# 公式： 
+#	X_std = (X - X.min(axis=0)) / (X.max(axis=0) - X.min(axis=0))
+# 	X_scaled = X_std * (max - min) + min
 
 from sklearn.preprocessing import StandardScaler  # 标准化
 st = StandardScaler()
@@ -82,6 +86,29 @@ import numpy as np
 it = SimpleImputer(missing_values=np.nan, strategy='mean', verbose=0)
 data = it.fit_transform([[12, 23, 13, 33], [92, np.nan, 73, 33], [15, 93, 33, 35]])
 print(data)
+```
+
+
+
+### 数据降维
+
+- **特征选择**
+- 主要方法
+    
+  1. filter（过滤式）：VarianceThreshold（方差过滤）
+    2. Embedded（嵌入式）：正则化、决策树
+    3. Wrapper（包裹式）
+    - 目的：
+    1.   减少特征数量、降维，使模型泛化能力更强，减少过拟合；
+      2. 增强对特征和特征值之间的理解
+
+- **PCA分析**
+
+```
+from sklearn.decomposition import PCA
+# 本质：PCA是一种分析、简化数据集的技术
+# 目的：是数据降维压缩，尽可能降低原数据的维度（复杂度），会损失少量信息
+# 作用：可以削减回归分析或者聚类分析中特征的数量
 ```
 
 
