安装jupyter.exe并测试读取csv数据

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -111,9 +111,11 @@ from sklearn.decomposition import PCA
 # 作用：可以削减回归分析或者聚类分析中特征的数量
 ```
 
+​	安装jupyter模板：pip install jupyter
 
+​	在jupyter上编写python代码，启动jupyter：jupyter notebook
 
-
+​	在jupyter编写代码可以看见表的信息
 
 
 
