学习了sklearn下的估计器

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -94,13 +94,13 @@ print(data)
 
 - **特征选择**
 - 主要方法
-    
+  
   1. filter（过滤式）：VarianceThreshold（方差过滤）
     2. Embedded（嵌入式）：正则化、决策树
     3. Wrapper（包裹式）
     - 目的：
     1.   减少特征数量、降维，使模型泛化能力更强，减少过拟合；
-      2. 增强对特征和特征值之间的理解
+          2. 增强对特征和特征值之间的理解
 
 - **PCA分析**
 
@@ -118,6 +118,19 @@ from sklearn.decomposition import PCA
 ​	在jupyter编写代码可以看见表的信息
 
 
+
+### 估计器
+
+```python
+# 以下是用于分类的估计器
+from sklearn.neighbors import *  # k邻近算法
+from sklearn.naive_bayes import *  # 贝叶斯算法
+from sklearn.linear_model import LogisticRegression  # 逻辑回归
+from sklearn.tree import * # 决策树和随机森林
+# 以下是用于回归的估计器
+from sklearn.linear_model import LogisticRegression  # 线性回归
+from sklearn.linear_model import Ridge  # 岭回归
+```
 
 
 
