学习了机器学习开发流程

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -134,7 +134,27 @@ from sklearn.linear_model import Ridge  # 岭回归
 
 
 
+### 机器学习开发流程
 
+1. #### 拿到原始数据
+
+   1. 明确问题做什么
+   2. 根据数据类型划分应用种类
+
+2. #### 数据的基本处理
+
+   1. pandas去处理数据（缺失值、合并表等等）
+
+3. #### 特征工程
+
+   1. 分类或者回归处理
+   2. 制作模型（算法 + 数据）
+   3. 找到合适的方法进行预测
+
+4. #### 模型评估
+
+   1. （合格）上线使用，以API形式提供
+   2. （不合格）换算法，换参数
 
 
 
