学习了k近邻算法的使用

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -156,6 +156,14 @@ from sklearn.linear_model import Ridge  # 岭回归
    1. （合格）上线使用，以API形式提供
    2. （不合格）换算法，换参数
 
+### k 近邻算法
+
+```python
+# k 近邻算法需要做标准化处理
+# k 近邻算法公式
+# 根号((a1-b1)^2+(a2-b2)^2+(a3-b3)^2)
+```
+
 
 
 
