--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -156,12 +156,55 @@ from sklearn.linear_model import Ridge  # 岭回归
    1. （合格）上线使用，以API形式提供
    2. （不合格）换算法，换参数
 
-### k 近邻算法
+### k 近邻算法（实际工程中一般不用）
 
 ```python
 # k 近邻算法需要做标准化处理
 # k 近邻算法公式
 # 根号((a1-b1)^2+(a2-b2)^2+(a3-b3)^2)
+from sklearn.neighbors import KNeighborsClassifier  # k近邻算法API
+
+# 进行算法流程  knn估计器流程
+knn = KNeighborsClassifier(n_neighbors=5)  # k值设为5  ==> n_neighbors=5
+knn.fit(x_train, y_train)
+# 得出预测结果
+y_predict = knn.predict(x_test)
+print(f'预测的目标签到位置为：{y_predict}')
+# 得出准确率
+print(f'预测的准确率：{knn.score(x_test, y_test)}')
+```
+
+##### k 取多大的影响
+
+- k 值取小：容易受异常点的影响
+- k 值取大：容易受k值数量（类别）波动
+
+##### 优点：
+
+- 简单，易于理解，易于实现，无需估计参数，无需训练
+
+##### 缺点：
+
+- 懒惰算法，对测试样本分类时的计算量大，内存开销大
+
+- 必须指定k值，k值选择不当则分类精度不能保证
+
+ ##### 使用场景：
+
+- 小数据场景，几千 几万样本，具体场景具体业务去测试
+
+```python
+API: sklearn.neighbors.KNeighborsClassifier(n_neighbors=5, algorithm='auto')
+        参数：
+            n_neighbors: int 可选默认为5（邻居数） ，k_neighbors 查询默认使用的邻居数
+            
+            algorithm：{'auto', 'ball_tree', 'kd_tree', 'brute'} 可选用与计算最近邻居的算法
+            'ball_tree' 将会使用balltrue， kd_tree将使用KDtree ‘auto’ 将尝试更具传递给fit放大的值来决定最合适的算法。（不同实现方法影响效率）
+            
+        knn = KNeighborsClassifier()
+        knn.fit(data) 传入数据
+        knn.score(x_test, y_test)  
+        knn.predict(x_test)  # 预测特征测试集的目标集
 ```
 
 
