学习了朴素贝叶斯算法

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -209,9 +209,36 @@ API: sklearn.neighbors.KNeighborsClassifier(n_neighbors=5, algorithm='auto')
 
 
 
+### 朴素贝叶斯算法
 
+- 算法不需要调参
+- 朴素贝叶斯算法擅长文本分类
+- 神经网络对文本分类会比这个方法的效果更好
 
+```python
+# 朴素贝叶斯算法公式
+# P(科技|影院，支付宝，云计算)=P(影院，支付宝，云计算|科技)*P(科技)
+from sklearn.naive_bayes import MultinomialNB  # 朴素贝叶斯算法api
 
+# 进行朴素贝叶斯算法的预测
+mlt = MultinomialNB(alpha=1.0)
+mlt.fit(x_train, y_train)
+y_predict = mlt.predict(x_test)
+print(f'预测的准确率为：{mlt.score(x_test, y_test)}')
+```
+
+- ##### 朴素贝叶斯算法优点
+
+  - 属性可以离散可以连续
+  - 数学基础扎实,分类效率稳定
+  - 假设简单,但是在很多实际情况下表现很好
+  - 速度较快,一定程度上缓解了维度灾难
+
+- ##### 朴素贝叶斯算法缺点
+
+  - 由于使用样本独立性的假设，所以如果样本属性有关联时，其效果不好
+  - 对噪音数据与缺失数据不太敏感
+  - 由于训练集当中进行统计词这些工作，会对结果造成干扰
 
 
 
