--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -242,6 +242,34 @@ print(f'预测的准确率为：{mlt.score(x_test, y_test)}')
 
 
 
+### 交叉验证（通常搭配超参数一起使用）
+
+- 将拿到的训练数据，分为训练集和验证集。以下图为例：将数据分成5份，其中一份作为验证集。然后经过5次（组）的测试，每次都更换不同的验证集。即得到5组模型的结果，取平局值作为最终结果。又称5折交叉验证。
+
+![交叉验证](D:\FileDocument\零碎文件\Django\Python-\机器学习\交叉验证过程.png)
+
+![交叉验证2](D:\FileDocument\零碎文件\Django\Python-\机器学习\交叉验证.png)
+
+
+
+### 超参数
+
+- ```python
+  # 超参数API
+  from sklearn.model_selection import GridSearchCV
+  ```
+  - **estimator**：所使用的分类器，如estimator=RandomForestClassifier(min_samples_split=100,min_samples_leaf=20,max_depth=8,max_features='sqrt',random_state=10), 并且传入除需要确定最佳的参数之外的其他参数。每一个分类器都需要一个scoring参数，或者score方法。
+  - **param_grid**：值为字典或者列表，即需要最优化的参数的取值，param_grid = {'n_neighbors': [3, 5, 10]} 。
+  - **scoring**：准确度评价标准，默认None, 这时需要使用score函数；或者如scoring='roc_auc'，根据所选模型不同，评价准则不同。字符串（函数名），或是可调用对象，需要其函数签名形如：scorer(estimator, X, y)；如果是None，则使用estimator的误差估计函数。
+  - **cv**：交叉验证参数，默认None，使用三折交叉验证。指定fold数量，默认为3，也可以是yield训练/测试数据的生成器。
+  - **refit**：默认为True,程序将会以交叉验证训练集得到的最佳参数，重新对所有可用的训练集与开发集进行，作为最终用于性能评估的最佳模型参数。即在搜索参数结束后，用最佳参数结果再次fit一遍全部数据集。
+  - **iid**：默认True,为True时，默认为各个样本fold概率分布一致，误差估计为所有样本之和，而非各个fold的平均。
+  - **verbose**：日志冗长度，int：冗长度，0：不输出训练过程，1：偶尔输出，>1：对每个子模型都输出。
+  - **n_jobs**：并行数，int：个数，-1：跟CPU核数一致, 1:默认值。
+  - **pre_dispatch**：指定总共分发的并行任务数。当n_jobs大于1时，数据将在每个运行点进行复制，这可能导致OOM，而设置pre_dispatch参数，则可以预先划分总共的job数量，使数据最多被复制pre_dispatch次
+
+
+
 
 
 
