学习了随机森林

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -306,7 +306,7 @@ print(f'预测的准确率为：{mlt.score(x_test, y_test)}')
 
     - **min_weight_fraction_leaf** ：在引入样本权重的情况下，设置每一个叶子节点上样本的权重和的最小值，一旦某个叶子节点上样本的权重和小于该参数指定的值，则该叶子节点会联同其兄弟节点被减去，即其父结点不进行划分。该参数默认为0，表示不考虑权重的问题，若样本中存在较多的缺失值，或样本类别分布偏差很大时，会引入样本权重，此时就要谨慎设置该参数。
 
-    - **max_features：**划分结点、寻找最优划分属性时，设置允许搜索的最大属性个数，默认为None。假设训练集中包含的属性个数为n，None表示搜索全部n个的候选属性；‘auto’表示最多搜索sqrt(n)个属性；sqrt表示最多搜索sqrt(n)个属性；‘log2’表示最多搜索log2(n)个属性；用户也可以指定一个整数k，表示最多搜索k个属性。需要说明的是，尽管设置了参数**max_features**，但是在至少找到一个有效（即在该属性上划分后，**criterion**指定的度量标准有所提高）的划分属性之前，最优划分属性的搜索不会停止。
+    - **max_features：**划分结点、寻找最优划分属性时，设置允许搜索的最大特征数量，默认为None。假设训练集中包含的属性个数为n，None表示搜索全部n个的候选属性；‘auto’表示最多搜索sqrt(n)个属性；sqrt表示最多搜索sqrt(n)个属性；‘log2’表示最多搜索log2(n)个属性；用户也可以指定一个整数k，表示最多搜索k个属性。需要说明的是，尽管设置了参数**max_features**，但是在至少找到一个有效（即在该属性上划分后，**criterion**指定的度量标准有所提高）的划分属性之前，最优划分属性的搜索不会停止。
 
     - **random_state :**当将参数**splitter**设置为‘random’时，可以通过该参数设置随机种子号，默认为None，表示使用np.random产生的随机种子号。
 
@@ -346,9 +346,28 @@ print(f'预测的准确率为：{mlt.score(x_test, y_test)}')
 
       
 
-- #### 随机森林（决策树升级版）
+- #### 随机森林（决策树升级版）==> 
 
-  - 
+  - ##### 建立多个决策树（随机有放回的抽样）
+  
+    - *多颗随机树投票决定使用*
+  
+    1. 随机在N个样本中选择一个样本，重复N次（样本可能重复）
+    2. 随机在M个特征中选出m个特征（m<M）
+    3. 建立的多个随机树样本、特征都不一样
+  
+  - ##### 随机森林API
+  
+    - ```python
+      from sklearn.ensemble import RandomForestClassifier  # 导入随机森林预测API
+      from sklearn.model_selection import GridSearchCV  # 网格搜索
+      ```
+  
+    - 通常配合超参数一起使用（网格搜索GridSearchCV）
+
+
+
+
 
 
 
