学习了线性回归方法中的正规方程求解预测

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -41,6 +41,8 @@ from sklearn.feature_extraction.text import TfidfVectorizer
 
 #### 标准化（常使用）
 
+**注意事项：新版本在使用标准化时必须指定数据为二维数组，否则会报错，使用属性 reshape 可以自由转换**
+
 优点：不容易受异常点的影响，利用方差来求标准差，方差考量数据的稳定性
 
 适合现代嘈杂大数据场景
@@ -366,6 +368,21 @@ print(f'预测的准确率为：{mlt.score(x_test, y_test)}')
     - 通常配合超参数一起使用（网格搜索GridSearchCV）
 
 
+
+### 回归算法
+
+- #### 线性回归
+
+  - ```python
+    # 相应的API
+    # LinearRegression 正规方程API：普通最小二乘线性回归
+    # coef_:回归系数
+    # SGDRegressor 梯度下降API
+    from sklearn.linear_model import LinearRegression, SGDRegressor
+    std_y.inverse_transform(y_predict)  # inverse_transform用于标准化后还原真实数据
+    ```
+
+    
 
 
 
