学习了梯度下降API的使用，适合大量数据的预测

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -373,6 +373,10 @@ print(f'预测的准确率为：{mlt.score(x_test, y_test)}')
 
 - #### 线性回归
 
+  - **正规方程回归API：LinearRegression（适合少量数据预测）**
+
+  - **梯度下降回归API：SGDRegressor （适合大量数据预测）**
+
   - ```python
     # 相应的API
     # LinearRegression 正规方程API：普通最小二乘线性回归
@@ -382,9 +386,25 @@ print(f'预测的准确率为：{mlt.score(x_test, y_test)}')
     std_y.inverse_transform(y_predict)  # inverse_transform用于标准化后还原真实数据
     ```
 
-    
+  - ```python
+    # 正规方程求解预测结果
+    lr = LinearRegression()
+    lr.fit(x_train, y_train)
+    print(f'13个特征值的回归系数：{lr.coef_}')
+    # 预测房子的价格
+    y_predict = lr.predict(x_test)
+    y_predict = std_y.inverse_transform(y_predict)  # 还原真实数据
+    print(f'测试集里面每个房子的预测价格：{y_predict}')
+    ```
 
+- #### 均方误差（用于评估回归器的性能）
 
+  - **mean_squared_error(y_true, y_pred)**
+    - y_true：真实值（标准化之前的值）
+    - y_pred：预测值（标准化之前的值）
+    - return：浮点数结果
+
+  
 
 
 
