学习了使用均方误差

--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -373,9 +373,9 @@ print(f'预测的准确率为：{mlt.score(x_test, y_test)}')
 
 - #### 线性回归
 
-  - **正规方程回归API：LinearRegression（适合少量数据预测）**
+  - **正规方程回归API：LinearRegression（适合少量数据预测，不需要选择学习率）**
 
-  - **梯度下降回归API：SGDRegressor （适合大量数据预测）**
+  - **梯度下降回归API：SGDRegressor （适合大量数据预测，需要选择学习率）**
 
   - ```python
     # 相应的API
@@ -400,8 +400,15 @@ print(f'预测的准确率为：{mlt.score(x_test, y_test)}')
 - #### 均方误差（用于评估回归器的性能）
 
   - **mean_squared_error(y_true, y_pred)**
+
+    - ```python
+      from sklearn.metrics import mean_squared_error
+      ```
+
     - y_true：真实值（标准化之前的值）
+
     - y_pred：预测值（标准化之前的值）
+
     - return：浮点数结果
 
   
